--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: "Times New Roman", Times, serif;
+  font-family: Lato, Times, serif;
 }
 
 header {
@@ -42,12 +42,16 @@ img {
   padding: 2px;
   margin: 10px;
   color: royalblue;
-  background-color: lightskyblue;
-  border: 2px solid cornflowerblue;
+  background-color: skyblue;
   border-radius: 10px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+  text-decoration: none;
+}
+
+.contact {
+  text-decoration: none;
 }
